# challenger-app-idealens

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  models.py  sessions.py  users.py
backend/app/core/: config.py  llm_models.py  rate_limit.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  base.py  message.py  refresh_token.py  session.py  user.py
backend/app/prompts/: analysis_system.py
backend/app/schemas/: chat.py  graph.py  session.py  user.py
backend/app/services/: auth_service.py  encryption_service.py  llm_service.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_health.py  test_services.py  test_sessions.py  test_users.py
docs/claude_logs/: DECISION_LOG.md
docs/manual/: README.md  account.md  deployment.md  faq.md  getting-started.md  graph.md  testing.md  workspace.md
docs/planning/: DEPLOYMENT.md  ITER_01.md  ITER_02.md  ITER_03.md  ITER_04.md  ITER_05.md  ITER_06.md  ITER_07.md  SKELETON.md  SVELTE_REFERENCE.md
frontend/: index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: main.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnalysisNode.tsx  AppHeader.tsx  ChatInput.tsx  ChatPanel.tsx  GraphPanel.tsx  GraphToolbar.tsx  MessageBubble.tsx  (+6 more)
scripts/: run-tests.sh
(+34 files in other folders)
